--- a/db/data/tutorials.yml
+++ b/db/data/tutorials.yml
@@ -1,7 +1,7 @@
 - title: Introduction à Donjons et Dragons
-  content: Une introduction complète à l'univers de Donjons et Dragons.
+  content: Donjons et Dragons, souvent abrégé en D&D, est le tout premier jeu de rôle sur table de genre médiéval-fantastique. Depuis sa création dans les années 1970, il a captivé des millions de joueurs à travers le monde avec ses histoires épiques et ses aventures palpitantes. Plongez dans un monde où la magie est omniprésente, où des créatures mythiques arpentent la terre, et où chaque décision que vous prenez peut changer le cours de l'histoire. Que vous soyez un guerrier valeureux, un mage puissant ou un voleur rusé, chaque partie de D&D promet des expériences uniques et mémorables. Découvrez les mécaniques de jeu, les différentes classes et races de personnages, ainsi que les vastes univers dans lesquels vos aventures se dérouleront. Préparez-vous à vivre des quêtes épiques, à affronter des dragons redoutables et à forger des alliances inoubliables.
   name: Donjons et Dragons
-  video_url: <iframe width="560" height="315" src="https://www.youtube.com/embed/OK-LrV2eBQ8?si=GjxCBhdI6ujNUepD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  video_url: "https://www.youtube.com/embed/OK-LrV2eBQ8?si=GjxCBhdI6ujNUepD"
   tuto_order: 1
 
 - title: Races de Donjons et Dragons
