changement du nom rogue vs Voleur

--- a/db/data/tutorials.yml
+++ b/db/data/tutorials.yml
@@ -62,7 +62,7 @@
 
 - title: Classe Voleur D&D
   content: >
-    Le Rogue, ou Voleur, est la classe parfaite pour ceux qui préfèrent la discrétion et la ruse.
+    Le Voleur est la classe parfaite pour ceux qui préfèrent la discrétion et la ruse.
   name: Donjons et Dragons
   video_url: "https://example.com/rogue_video"
   tuto_order: 9
