modif de la conversation sur la partie message

--- a/db/data/messages.yml
+++ b/db/data/messages.yml
@@ -31,3 +31,13 @@ messages:
   - content: "Quelqu'un a des provisions ?"
   - content: "C'est un endroit dangereux."
   - content: "Merci à tous pour votre aide."
+  - content: "Les gobelins se regroupent, nous devons agir vite !"
+  - content: "Nous devons protéger le village à tout prix."
+  - content: "Je vois des renforts ennemis arriver !"
+  - content: "Nous devons nous préparer à défendre nos positions."
+  - content: "Le chef des gobelins est ici, c'est notre chance de le capturer."
+  - content: "Nous sommes encerclés, tenez bon !"
+  - content: "Je lance un sort d'attaque !"
+  - content: "Nous avons besoin de renforts, envoyez un message à la ville."
+  - content: "Tenez la ligne, ne laissez personne passer."
+  - content: "Il nous faut du renfort. Nous avons besoin d'aide pour attaquer le dragon !"
