amélioration du prompt

--- a/db/data/lexique.yml
+++ b/db/data/lexique.yml
@@ -804,10 +804,33 @@
     <p>En conclusion, la démonologie dans les JDR est une pratique fascinante et périlleuse qui peut enrichir l'expérience de jeu, mais qui nécessite également une réflexion approfondie et une prudence extrême. Les joueurs qui choisissent d'explorer cette voie doivent être prêts à affronter des défis redoutables et à faire face à des dilemmes moraux complexes pour atteindre leurs objectifs dans le monde mystérieux et dangereux des démons.</p>
   improved_by_gpt: done
 - title: Élémentaire
-  content: "<h3>Creatures Élémentaires</h3><p>Les créatures élémentaires sont des
-    êtres composés d'un des éléments primaires comme le feu, l'eau, l'air ou la terre.
-    Chacun possède des capacités uniques basées sur son élément, jouant souvent un
-    rôle vital dans les combats et les énigmes environnementales dans les JDR.</p>"
+  content: "<h3>Introduction</h3>\nDans le vaste univers des jeux de rôle, les créatures
+    élémentaires jouent un rôle essentiel. Leur nature particulière, liée à l'un des
+    quatre éléments primaires - le feu, l'eau, l'air et la terre - en fait des entités
+    fascinantes à étudier. Ces créatures possèdent des capacités uniques et des caractéristiques
+    spécifiques qui les distinguent des autres formes de vie fantastique rencontrées
+    dans les jeux de rôle. \n\n<h3>Créatures Élémentaires</h3>\nLes créatures élémentaires
+    sont des êtres constitués d'un seul élément, ce qui leur confère des pouvoirs
+    et des faiblesses propres à leur nature. Par exemple, une salamandre, créature
+    de feu, peut projeter des flammes dévastatrices sur ses ennemis, tandis qu'un
+    sylphe, être d'air, peut se déplacer à une vitesse fulgurante et contrôler les
+    courants d'air pour manipuler son environnement. Ces créatures élémentaires peuvent
+    être des alliés redoutables ou des adversaires redoutables, en fonction de la
+    manière dont les joueurs interagissent avec elles.\n\nDans un jeu de rôle, les
+    créatures élémentaires peuvent être utilisées de différentes manières. Elles peuvent
+    être invoquées par les joueurs pour les aider dans leur quête, ou bien être des
+    gardiennes de lieux sacrés qu'il faudra affronter pour progresser. Leur présence
+    peut également être le signe de déséquilibres élémentaires dans le monde du jeu,
+    nécessitant une intervention des héros pour rétablir l'harmonie.\n\n<h3>Implications
+    et Conclusion</h3>\nComprendre le rôle des créatures élémentaires dans un jeu
+    de rôle permet aux joueurs de mieux appréhender les défis qui les attendent. En
+    exploitant les faiblesses des créatures élémentaires ou en tirant parti de leurs
+    forces, les joueurs pourront progresser plus efficacement dans l'aventure. De
+    plus, l'étude des créatures élémentaires peut enrichir l'univers du jeu en offrant
+    des interactions et des scénarios plus variés et complexes. En somme, les créatures
+    élémentaires sont des éléments essentiels de l'imaginaire des jeux de rôle, offrant
+    aux joueurs un univers riche en possibilités et en surprises."
+  improved_by_gpt: done
 - title: Forgeron
   content: "<h3>Le Métier de Forgeron</h3><p>Le forgeron est un artisan spécialisé
     dans la fabrication d'armes, d'armures et d'autres objets métalliques. Dans les
