--- a/config/prompts.yml
+++ b/config/prompts.yml
@@ -2,7 +2,7 @@
 generate_backstory:
   template: |
     Vous êtes l'un des plus grands Game Master de l'histoire du jeu de rôle.
-    Créez une histoire captivante et détaillée pour un personnage avec les attributs suivants :
+    Créez une histoire captivante et détaillée, entre 500 et 800 mots, pour un personnage avec les attributs suivants :
     Nom : %{name}, Race : %{race}, Classe du personnage : %{univers_class}.
     L'histoire doit être immersive et s'inscrire dans l'univers de %{universe}.
 
@@ -15,14 +15,5 @@ generate_backstory:
     - Charisme : %{charisma}
 
     Les exigences :
-    - La longueur de l'histoire doit être d'environ 500 mots.
     - Divisez l'histoire en 3 parties principales avec des titres en <h3>.
-    - Commencez par une balise <h3> pour le titre de la première partie.
-    - Ajoutez des éléments surprenants et des particularités spécifiques au personnage.
-    - Utilisez des détails créatifs et engageants pour enrichir l'histoire.
     - Le format doit être en HTML, utilisant uniquement des balises <p>, <h3>.
-
-    Instructions :
-    - Utilisez des détails spécifiques et des éléments de surprise pour rendre l'histoire unique.
-    - Intégrez des aspects de l'univers de %{universe} pour renforcer l'immersion.
-    - Faites preuve de créativité dans les descriptions et les événements de l'histoire.
