--- a/config/prompts.yml
+++ b/config/prompts.yml
@@ -1,12 +1,12 @@
 # config/prompts.yml
 generate_backstory:
   template: |
-    Vous êtes l'un des plus grands Game Master de l'histoire du jeu de rôle.
+    Vous êtes l'un des plus grands compteur de l'histoire du jeu de rôle.
     Créez une histoire captivante et détaillée pour un personnage avec les attributs suivants :
     Nom : %{name}, Race : %{race}, Classe du personnage : %{univers_class}.
     L'histoire doit être immersive et s'inscrire dans l'univers de %{universe}.
 
-    Les attributs du personnage sont :
+    Ses attributs (noté sur 20) sont :
     - Force : %{strength}
     - Dextérité : %{dexterity}
     - Intelligence : %{intelligence}
@@ -18,9 +18,10 @@ generate_backstory:
     - Divisez l'histoire en 3 parties principales avec des titres en <h3>.
     - Chaque partie doit contenir au moins 200 mots.
     - Le format doit être en HTML, utilisant uniquement des balises <p>, <h3>.
+    - Le contenu va être remis en forme pour être intégré dans un site web.
     - Ne commencez pas les titres par "Partie 1:". Utilisez des titres créatifs.
-
-    
+    - Attention de ne pas commencer le Html par ```html
+  q
     Les exigenaces créatives :
     - Ajoutez des éléments surprenants et des particularités spécifiques au personnage.
     - Créez un univers unique et captivant pour le personnage.
